<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/btn_calibration"
        android:icon="@drawable/ic_baseline_screen_rotation_24"
        app:showAsAction="always"
        android:title="@string/recalibrate">
    </item>
    <item
        android:id="@+id/btn_initialize"
        android:icon="@drawable/ic_baseline_sync_24"
        app:showAsAction="always"
        android:title="@string/initialize_positioning">
    </item>
    <item
        android:id="@+id/btn_location"
        android:icon="@drawable/ic_baseline_my_location_24"
        app:showAsAction="always"
        android:title="@string/current_location">
    </item>
    <item
        android:id="@+id/btn_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always"
        android:title="@string/setting">
    </item>
</menu>